Working on a preview form

--- a/datacombo/templates/index.html
+++ b/datacombo/templates/index.html
@@ -22,7 +22,7 @@
 
 <h2>Or you might want to...</h2>
 <ul class="list-inline">
-  <li><a href="{% url "upload" %}" class="btn btn-large btn-primary">Upload CSV to a Survey</a></li>
+  <li><a href="{% url "upload" %}" class="btn btn-large btn-primary"><i class="icon-plus"> </i>Upload CSV to a Survey</a></li>
   <li><a href="{% url "surveys-list" %}" class="btn btn-large btn-default">Browse the list of surveys</a></li>
   <li><a href="{% url "schools-list" %}" class="btn btn-large btn-default">Browse the list of schools</a></li>
   <li><a href="{% url "variables-list" %}" class="btn btn-large btn-default">Browse the list of variables</a></li>
