--- a/datacombo/templates/base.html
+++ b/datacombo/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
 
   <body>
