Completed import sessions management

--- a/datacombo/templates/index.html
+++ b/datacombo/templates/index.html
@@ -20,12 +20,19 @@
   {% endfor %}
 </table>
 
-<h2>Or you might want to...</h2>
+<h2>Data Exchange</h2>
 <ul class="list-inline">
-  <li><a href="{% url "upload" %}" class="btn btn-large btn-primary"><i class="icon-plus"> </i>Upload CSV to a Survey</a></li>
-  <li><a href="{% url "surveys-list" %}" class="btn btn-large btn-default">Browse the list of surveys</a></li>
-  <li><a href="{% url "schools-list" %}" class="btn btn-large btn-default">Browse the list of schools</a></li>
-  <li><a href="{% url "variables-list" %}" class="btn btn-large btn-default">Browse the list of variables</a></li>
+  <li><a href="{% url "upload" %}" class="btn btn-large btn-primary"><i class="icon-upload"> </i>Upload CSV to a Survey</a></li>
+  <li><a href="{% url "sessions-list" %}" class="btn btn-large btn-default"><i class="icon-th-list"> </i>Manage Import Sessions</a></li>
+  <li><a href="" class="btn btn-large btn-default" disabled="disabled"><i class="icon-download-alt"> </i>Export Comparative Data</a></li>
+  <li><a href="" class="btn btn-large btn-default" disabled="disabled"><i class="icon-file"> </i>Generate JSON File</a></li>
+</ul>
+
+<h2>Data Management</h2>
+<ul class="list-inline">
+  <li><a href="{% url "surveys-list" %}" class="btn btn-large btn-default">Manage Surveys</a></li>
+  <li><a href="{% url "schools-list" %}" class="btn btn-large btn-default">Manage Schools</a></li>
+  <li><a href="{% url "variables-list" %}" class="btn btn-large btn-default">Manage Survey Variables</a></li>
 </ul>
 
 {% endblock %}
