Added DetailView for School and refine import methods

--- a/datacombo/templates/session_list.html
+++ b/datacombo/templates/session_list.html
@@ -8,6 +8,7 @@
   <tr>
     <th>Session Title</th>
     <th>Number of Schools Imported</th>
+    <th>Number of Participations Recorded</th>
     <th>Uploaded On</th>
     <th>Action</th>
   </tr>
@@ -16,6 +17,7 @@
   <tr class="session">
     <td>{{ session.title }}</td>
     <td>{{ session.school_count }}</td>
+    <td>{{ session.pr_count }}</td>
     <td>{{ session.date_created }}</td>
     <td>
       <a href="{% url "sessions-edit" pk=session.id %}" class="btn btn-default">Edit</a>
