--- a/datacombo/templates/school_list.html
+++ b/datacombo/templates/school_list.html
@@ -8,15 +8,15 @@
   <tr>
     <th>School Name</th>
     <th>Abbrev.</th>
-    <th>Old School Short</th>
+    <th>Old School Alpha</th>
     <th>Action</th>
   </tr>
   
   {% for school in object_list %}
   <tr class="school">
-    <td>{{ school.name }}</td>
+    <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
     <td>{{ school.abbrev_name }}</td>
-    <td>{{ school.short }}</td>
+    <td>{{ school.alpha }}</td>
     <td>
       <a href="{% url "schools-edit" pk=school.id %}" class="btn btn-default">Edit</a>
       <a href="{% url "schools-delete" pk=school.id %}" class="btn btn-danger">Delete</a>
