Added repeat counts to school and participation summaries

--- a/datacombo/templates/school_list.html
+++ b/datacombo/templates/school_list.html
@@ -8,7 +8,7 @@
   <tr>
     <th>School Name</th>
     <th>Abbrev.</th>
-    <th>Old School Alpha</th>
+    <th>Times Participated in YT</th>
     <th>Action</th>
   </tr>
   
@@ -16,7 +16,7 @@
   <tr class="school">
     <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
     <td>{{ school.abbrev_name }}</td>
-    <td>{{ school.alpha }}</td>
+    <td>{{ school.repeat_count }}</td>
     <td>
       <a href="{% url "schools-edit" pk=school.id %}" class="btn btn-default">Edit</a>
       <a href="{% url "schools-delete" pk=school.id %}" class="btn btn-danger">Delete</a>
