--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -92,7 +92,7 @@
               <tr>
                 <th>School Name</th>
                 <th>Abbreviation</th>
-                <th>School Short</th>
+                <th>School Alpha</th>
               </tr>
 
               {% for school in sch_objects %}
