Optimized CSV upload method by using bulk_create

--- a/datacombo/templates/session_list.html
+++ b/datacombo/templates/session_list.html
@@ -9,6 +9,7 @@
     <th>Session Title</th>
     <th>Number of Schools Imported</th>
     <th>Number of Participations Recorded</th>
+    <th>Number of Student Responses Recorded</th>
     <th>Uploaded On</th>
     <th>Action</th>
   </tr>
@@ -18,6 +19,7 @@
     <td>{{ session.title }}</td>
     <td>{{ session.school_count }}</td>
     <td>{{ session.pr_count }}</td>
+    <td>{{ session.student_count }}</td>
     <td>{{ session.date_created }}</td>
     <td>
       <a href="{% url "sessions-edit" pk=session.id %}" class="btn btn-default">Edit</a>
