Switched database to Postgres and added seed_vars to management

--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -115,7 +115,7 @@
 
   <h2>CSV File Information</h2>
 
-  <p>There are {{ number_of_rows }} rows in your file.</p>
+  <p>There are {{ number_of_rows }} data points in your file.</p>
 
   <p>If this all looks good, press the big button below to confirm data import.<br />
     <div class="container">
