--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -60,7 +60,7 @@
                 <tr>
                   <th>School Name</th>
                   <th>Date Participated</th>
-                  <th>Number of Students Imported</th>
+                  <th>Number of Students Created</th>
                 </tr>
 
                 {% for p in participation_objects %}
@@ -115,7 +115,9 @@
 
   <h2>CSV File Information</h2>
 
-  <p>There are {{ number_of_rows }} data points in your file.</p>
+  <p>There are {{ number_of_rows }} rows in your file.</p>  
+
+  <p>{{ number_of_datapoints }} data points were imported from your file.</p>
 
   <p>If this all looks good, press the big button below to confirm data import.<br />
     <div class="container">
