Minor adjustments to models to allow for longer character save

--- a/datacombo/templates/edit_session.html
+++ b/datacombo/templates/edit_session.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% if session.id %}
+{% if importsession.id %}
     <h1>Edit Session</h1>
 {% else %}
     <h1>Add Session</h1>
