--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -82,7 +82,7 @@
 
   {% if number_of_new_schools == 0 %}
 
-    <p>It looks like you don't have any new schools to add to the database from the uploaded file.</p>
+    <p>All schools in your CSV file already exist in the database.</p>
 
   {% else %}
 
