--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -4,7 +4,7 @@
 
 <h1>Data Import Confirmation</h1>
 
-{% if not csv_file %}
+{% if not_csv_file %}
 
   <p>That was not a valid CSV file. Please go back and try re-uploading a different file.</p>
 
