--- a/datacombo/templates/update_survey.html
+++ b/datacombo/templates/update_survey.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 
-<h1>Update Survey</h1>
+<h1>Upload New Data to Survey</h1>
 
 <p>You're about to upload new, cleaned CSV data for:<br>
 <b>{{ survey.name }}</b>
 </p>
 
-<form action="{{ action }}" method="POST">
+<form action="{{ action }}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <ul>
     {{ form.as_p }}
   </ul>
-  <button id="save_survey" type="submit" class="btn btn-primary btn-large">Save</button>
+  <button id="upload" type="submit" class="btn btn-primary btn-large">Upload</button>
 </form>
 
-<a href="{% url "surveys-list" %}">back to list</a>
+<a href="{% url "home-view" %}">Back to home</a>
 {% endblock %}
