--- a/datacombo/templates/upload.html
+++ b/datacombo/templates/upload.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-<h1>Update Survey</h1>
+<h1>CSV Upload</h1>
 
-<p>Select a survey to upload data to, then pick a CSV file with cleaned data for that survey.</p>
+<p>Uploading new data for: {{ survey }}</p>
 
-<form action="{% url "upload" %}" method="post" enctype="multipart/form-data">
+<form action="{% url "surveys-upload" pk=survey.id %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <p><input type="submit" value="Upload" /></p>
+    <button type="submit" class="btn btn-large btn-default">Upload</button>
 </form>
 
 <a href="{% url "home-view" %}">back to home</a>
