--- a/datacombo/templates/survey.html
+++ b/datacombo/templates/survey.html
@@ -20,12 +20,11 @@
 
 <h1>Upload Data</h1>
 
-<form action="{% url "surveys-upload" pk=survey.id %}" method="POST">
-  {% csrf_token %}
-
-    <button type="submit" name="qpanel" class="btn btn-large btn-default">Upload New Qualtrics Panel</button>
-    <button type="submit" name="qraw" class="btn btn-large btn-default">Upload Qualtrics Raw Data</button>
-</form>
-
+<p>
+  <form action="{% url "surveys-upload" pk=survey.id %}" method="POST">
+    {% csrf_token %}
+      <button type="submit" class="btn btn-large btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</button>
+  </form>
+</p>
 <p><a href="{% url "home-view" %}">Back to home</a></p>
 {% endblock %}
