--- a/datacombo/templates/session_list.html
+++ b/datacombo/templates/session_list.html
@@ -6,7 +6,7 @@
 
 <p>When new data is imported, Catacombs will attempt to "hook" new data points with existing data. For example, if we have matching participation records of a school in both the database and the CSV file, Catacombs will "hook" all new imported responses with the existing participation records.</p>
 
-<p>The downside of this approach is that when you delete an import session in this table, all data points, e.g., schools, teachers, students, and response records, "hooked" to that session will be deleted from the database too. Removing import session should only be the last resort - always check the number of "hooked" data points in this table to have a sense of what will be affected when you delete the session.</p>
+<p>The downside of this approach is that when you delete an import session in this table, all data points, e.g., schools, teachers, students, and response records, "hooked" to that session will be deleted from the database too. Removing import session should only be the last resort. You have the option to delete schools and their participation records individually. Always check the number of "hooked" data points in this table to have a sense of what will be affected when you delete the session.</p>
 
 <table class="table table-striped">
   <tr>
