--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -137,7 +137,7 @@
     {% else %}
 
       <p>A total of {{ number_of_new_teachers }} teachers were added to the database. The following table lists all new teachers:</p>
-        <table class="table table-striped">
+        <table class="table table-striped table-condensed">
           <tr>
             <th>School</th>
             <th>Full Name</th>
@@ -167,6 +167,34 @@
     {% else %}
 
       <p>A total of {{ number_of_new_courses }} courses were added to the database.</p>
+        
+    {% endif %}
+
+  {% endif %}
+
+  {% if number_of_new_subjects %}
+
+    <h2>Update Subject Records</h2>
+
+    {% if number_of_new_subjects == 0 %}
+
+      <p>All subjects listed in your CSV file already exist in the database.</p>
+
+    {% else %}
+
+      <p>A total of {{ number_of_new_subjects }} subjects were added to the database.</p>
+
+        <table class="table table-striped">
+          <tr>
+            <th>Subject Name</th>
+          </tr>
+
+          {% for s in added_subjects %}
+          <tr>
+            <td>{{ s.name }}</td>
+          </tr>
+          {% endfor %}
+        </table>
         
     {% endif %}
 
