--- a/datacombo/templates/school_list.html
+++ b/datacombo/templates/school_list.html
@@ -28,5 +28,7 @@
   {% endfor %}
 </table>
 
-<a href="{% url "schools-new" %}">Add school</a>
+<p>Schools can only be added via importing Qualtrics survey panel. If you need to add more schools, go back to home page, pick a survey and import a panel.</p>
+
+<a href="{% url "home-view" %}">Back to home</a>
 {% endblock %}
