--- a/datacombo/templates/index.html
+++ b/datacombo/templates/index.html
@@ -34,6 +34,7 @@
 <ul class="list-inline">
   <li><a href="{% url "schools-list" %}" class="btn btn-large btn-default">Manage Schools</a></li>
   <li><a href="{% url "variables-list" %}" class="btn btn-large btn-default">Manage Survey Variables</a></li>
+  <li><a href="{% url "subjects-list" %}" class="btn btn-large btn-default">Manage Academic Subjects</a></li>
 </ul>
 
 <h2>Data Troubleshooting</h2>
