--- a/datacombo/templates/upload_confirm.html
+++ b/datacombo/templates/upload_confirm.html
@@ -200,12 +200,16 @@
 
   {% endif %}
 
-  <h2>CSV File Information</h2>
+  <h2>Other Information</h2>
 
   <p>There are {{ number_of_rows }} rows in your file.</p>  
 
+  {% if filetype == 'raw' %}
+    <p>A total of {{ number_of_new_students }} new students were recorded from your file.</p>  
+  {% endif %}
+
   {% if filetype == 'legacy' %}
-    <p>{{ number_of_datapoints }} data points were imported from your file.</p>  
+    <p>{{ number_of_datapoints }} data points were recorded from your file.</p>  
   {% endif %}
 
   <p>If this all looks good, press the big button below to confirm data import.<br />
